Resolves: fdo#68220 wrong index into source table

code in master is all very different, so 4-1-* only I think

Change-Id: I9277faa462b66a38c7da3ba9a92b0381c67cfe23
Reviewed-on: https://gerrit.libreoffice.org/5515
Reviewed-by: Kohei Yoshida <kohei.yoshida@suse.de>
Tested-by: Kohei Yoshida <kohei.yoshida@suse.de>
(cherry picked from commit 48cfdaa4fa453af03d18832e3765ffd65a5e107f)